--- a/apps/schedule/index.html
+++ b/apps/schedule/index.html
@@ -46,22 +46,23 @@ alternate_urls:
         <p class="notice-text" id="notice-text-en">
             Be careful with spoilers.<br>
             This schedule is for GLB/JP servers. For SEA server, add 8 days to each date.<br>
-            Until version 4.0, new characters release every 2 weeks; after 4.0, the interval changes to 3 weeks. 
-            Schedule may vary due to events/holidays. Character release order is subject to change.<br>
+            Until version 4.0, new characters release every 2 weeks; after 4.0, the interval changes to 3 weeks. <br>
+            This schedule and character release order is based on previous Asia server releases, but may be subject to change at any time due to unexpected circumstances or events.<br>
+            Character release order is not guaranteed to match Asia server or remain the same.<br>
             For detailed patch history, see <a href="https://docs.google.com/spreadsheets/d/1KmLUs1Cpp2WuDQZYHCW1xzCVCThWCB6R2VR5pFuLixE/edit?usp=sharing" target="_blank">P5X Patch History by Sages</a>.
         </p>
         <p class="notice-text" id="notice-text-jp" style="display: none;">
             スポイラーに注意してください。<br>
             このスケジュールはGLB/JPサーバー用です。SEAサーバーは各日付に8日を追加してください。<br>
             バージョン4.0までは2週間ごと、4.0以降は3週間ごとのリリースです。
-            イベント・祝日により変更される場合があります。<br>
+            イベント・祝日により変更される場合があります。<strong style="color:rgb(255, 255, 0);">キャラクターリリース順序は変更される場合があります。</strong><br>
             詳細なパッチ履歴は<a href="https://docs.google.com/spreadsheets/d/1KmLUs1Cpp2WuDQZYHCW1xzCVCThWCB6R2VR5pFuLixE/edit?usp=sharing" target="_blank">P5X Patch History by Sages</a>をご覧ください。
         </p>
         <p class="notice-text" id="notice-text-kr" style="display: none;">
             스포일러에 주의하세요.<br>
             이 스케줄은 GLB/JP 서버 기준입니다. SEA 서버는 각 날짜에 8일을 더해주세요.<br>
             4.0 버전까지는 2주 간격, 이후는 3주 간격으로 출시됩니다.
-            이벤트/휴일에 따라 변경될 수 있으며, 출시 순서도 변경될 수 있습니다.<br>
+            이벤트/휴일에 따라 변경될 수 있으며, <strong style="color:rgb(255, 255, 0);">출시 순서는 변경될 수 있습니다.</strong><br>
             자세한 패치 히스토리는 <a href="https://docs.google.com/spreadsheets/d/1KmLUs1Cpp2WuDQZYHCW1xzCVCThWCB6R2VR5pFuLixE/edit?usp=sharing" target="_blank">P5X Patch History by Sages</a>를 참고하세요.
         </p>
     </div>
