--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -146,6 +146,7 @@ alternate_urls:
                             <li>Denys</li> <!--6$ 25/12/27-->
                             <li>Matsu</li> <!--6$ 25/12/31-->
                             <li>Viiun</li> <!--6$ 26/01/02-->
+                            <li>ShibaEnjoyer</li> <!--6$ 26/01/12-->
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
