--- a/apps/maps/index.html
+++ b/apps/maps/index.html
@@ -2,7 +2,7 @@
 layout: maps
 permalink: /maps/
 language: kr
-title: 지도 뷰어 - P5X 루페르넷
+title: P5X 맵스 - 루페르넷
 description: P5X 맵 뷰어. 팰리스와 메멘토스의 모든 맵을 확인하세요.
 alternate_urls:
   en: /maps/?lang=en
