--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -134,6 +134,7 @@ alternate_urls:
                             <li>이*현</li> <!--30000 26/01/02-->
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>Skizor Kurogane</li><!--21$ 25/12/20-->
+                            <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
                             <li>임*훈</li><!--10000 25/07/06-->
