--- a/apps/pull-calc/index.html
+++ b/apps/pull-calc/index.html
@@ -285,10 +285,11 @@ redirect_from:
                                 </svg>
                             </span>
                         </label>
+                        <!-- 기본값은 Worst-->
                         <select id="inputWeaponScenario" class="modal-input">
                             <option value="best" id="optionBest">최선 (모든 50:50 성공)</option>
-                            <option value="average" selected id="optionAverage">평균 (절반 성공)</option>
-                            <option value="worst" id="optionWorst">최악 (모든 50:50 실패)</option>
+                            <option value="average" id="optionAverage">평균 (절반 성공)</option>
+                            <option value="worst" selected id="optionWorst">최악 (모든 50:50 실패)</option>
                         </select>
                     </div>
                 </div>
