--- a/apps/pull-calc/index.html
+++ b/apps/pull-calc/index.html
@@ -302,15 +302,11 @@ redirect_from:
         </div>
     </div>
 
-    <!-- Schedule Notice -->
+    <!-- Schedule Notice and Scenario Selector -->
     <div class="schedule-notice">
         <p class="notice-text" id="scheduleNotice">
             이 스케줄은 예상 일정이며, 실제 출시 날짜와 다를 수 있습니다. 클릭하여 계획에 추가/제거하세요.
         </p>
-    </div>
-
-    <!-- Schedule Scenario Selector -->
-    <div class="schedule-scenario-container">
         <div class="input-group">
             <label class="input-label">
                 <span id="labelScheduleScenario">4.0 이후 스케줄 시나리오</span>
