--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -129,12 +129,14 @@ alternate_urls:
                         <h4>Supporters</h4>
                         <ul>
                             <li style="color:#ffd34e; font-weight:700;">시아</li> <!--99$ 25/07/10-->
-                            <li style="color:#fff8e1">Arthur</li> <!--30$ 25/08/10-->
-                            <li style="color:#ad7326">안*현</li> <!--30000 25/09/10-->
+                            <li style="color:#fff8e1">SpoonceDaSpoon</li> <!--54$ 26/01/20-->
+                            <li style="color:#ad7326">Arthur</li> <!--30$ 25/08/10-->
+                            <li>안*현</li> <!--30000 25/09/10-->
                             <li>이*현</li> <!--30000 26/01/02-->
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>Skizor Kurogane</li><!--21$ 25/12/20-->
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
+                            <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
                             <li>임*훈</li><!--10000 25/07/06-->
@@ -148,6 +150,7 @@ alternate_urls:
                             <li>Matsu</li> <!--6$ 25/12/31-->
                             <li>Viiun</li> <!--6$ 26/01/02-->
                             <li>ShibaEnjoyer</li> <!--6$ 26/01/12-->
+                            <li>Seagull</li> <!--6$ 26/01/20-->
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
