--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -154,6 +154,7 @@ alternate_urls:
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
+                            <li>Shira</li> <!--3$ 26/01/20-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
